# mikke

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/scripts/: package.sh
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md  concept.md
examples/skills/mikke/: SKILL.md
src/: config.rs  embed.rs  health.rs  index.rs  main.rs  scan.rs  search.rs
tests/: cli.rs
tests/fixture/: mikke.toml
tests/fixture/broken/: broken-fm.md
tests/fixture/nested/: mikke.toml
tests/fixture/nested/drafts/: zebra-draft.md
tests/fixture/nested/inner/: .mikke.toml  zebra-inner.md
tests/fixture/nested/inner/scratch/: zebra-scratch.md
tests/fixture/nested/notes/: zebra-guide.md
tests/fixture/notes/: filename-title.md  no-frontmatter.md  robotics-control.md  robotics-slam.md  short.md
tests/golden/: find_bm25.txt  find_like_fallback.txt  find_nested.txt  find_short.txt  find_zero.txt  health-report.md  health.txt  hybrid_degrade.txt  list_tags.txt  manifest.tsv  recent.txt  tag_control.txt  tag_robotics.txt  title.txt  version_full.txt  version_slim.txt
